# cpsc585

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cpp
lib/: Board.cpp  Board.h  README.md  ecs.cpp  ecs.h  int_types.h
tst/: CMakeLists.txt  moves.cpp  tests.cpp
